Pull in latest shellbot from wincent and tune
Adds support for Anthropic models as well as the ability to toggle
around OpenAI models.

--- a/.gitmodules
+++ b/.gitmodules
@@ -211,3 +211,6 @@
 [submodule "dotfiles/config/nvim/pack/bundle/opt/cmp-nvim-lua"]
 	path = dotfiles/config/nvim/pack/bundle/opt/cmp-nvim-lua
 	url = https://github.com/hrsh7th/cmp-nvim-lua.git
+[submodule "dotfiles/config/nvim/pack/bundle/opt/shellbot"]
+	path = dotfiles/config/nvim/pack/bundle/opt/shellbot
+	url = https://github.com/codybuell/shellbot.git
