--- a/.gitmodules
+++ b/.gitmodules
@@ -217,3 +217,6 @@
 [submodule "dotfiles/config/nvim/pack/bundle/opt/treesj"]
 	path = dotfiles/config/nvim/pack/bundle/opt/treesj
 	url = https://github.com/Wansmer/treesj.git
+[submodule "dotfiles/config/nvim/pack/bundle/opt/codecompanion.nvim"]
+	path = dotfiles/config/nvim/pack/bundle/opt/codecompanion.nvim
+	url = https://github.com/olimorris/codecompanion.nvim.git
