Simplify tmux copy command detection

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -8,16 +8,10 @@
 #                                                                              #
 ################################################################################
 
-# if enterprise linux family ($DISTRO set in ~/.shell/exports)
-if-shell 'if [[ "`echo $DISTRO`" = "entlinux" ]]; then true; else false; fi' \
+if-shell '[[ "$OSTYPE" == linux* ]]' \
   'TMUX_COPY_COMMAND="xclip"'
 
-# if debian linux family ($DISTRO set in ~/.shell/exports)
-if-shell 'if [[ "`echo $DISTRO`" = "deblinux" ]]; then true; else false; fi' \
-  'TMUX_COPY_COMMAND="xclip"'
-
-# if osx ($DISTRO set in ~/.shell/exports)
-if-shell 'if [[ "`echo $DISTRO`" = "osx" ]]; then true; else false; fi' \
+if-shell '[[ "$OSTYPE" == darwin* ]]'
   'TMUX_COPY_COMMAND="reattach-to-user-namespace pbcopy"'
 
 ################################################################################
