Colorize the right hand side of the status line

--- a/dotfiles/config/tmux/tmux.conf
+++ b/dotfiles/config/tmux/tmux.conf
@@ -72,7 +72,7 @@ set-option -g status-left ' #S   ⧉ #I/#{session_windows} ⊞ #P/#{window_panes
 
 # status bar right side
 set-option -g status-right-length 100
-set-option -g status-right " #(pmset -g batt | awk 'NR==2 {print $3}' | sed 's/\;//')  [#{pane_width}x#{pane_height}]  %H:%M #(date -u '+%%H:%%M %%d-%%b-%%y') "
+set-option -g status-right "#[fg=yellow] #(pmset -g batt | awk 'NR==2 {print $3}' | sed 's/\;//') #[fg=blue] [#{pane_width}x#{pane_height}] #[fg=brightgreen] %H:%M #[fg=white] #(date -u '+%%H:%%M %%d-%%b-%%y') "
 
 ################################################################################
 #                                                                              #
