--- a/dotfiles/config/tmux/tmux.conf
+++ b/dotfiles/config/tmux/tmux.conf
@@ -139,29 +139,29 @@ bind-key -T copy-mode-vi MouseUp2Pane send-keys -X cancel \; paste-buffer
 ###########################
 
 # Copy selected text to system clipboard when mouse drag ends
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear "reattach-to-user-namespace\ pbcopy"
 
 # Double-click: select word and copy to clipboard
 bind-key -T copy-mode-vi DoubleClick1Pane \
   if-shell -Ft"{mouse}" "#{alternate_on}" \
     "send-keys -M" \
-    "send-keys -t\"{mouse}\" -X select-word \; send-keys -X copy-pipe-no-clear \"pbcopy\""
+    "send-keys -t\"{mouse}\" -X select-word \; send-keys -X copy-pipe-no-clear \"reattach-to-user-namespace\ pbcopy\""
 
 bind-key -T root DoubleClick1Pane \
   if-shell -Ft"{mouse}" "#{alternate_on}" \
     "send-keys -M" \
-    "copy-mode -t\"{mouse}\" \; send-keys -t\"{mouse}\" -X select-word \; send-keys -X copy-pipe-no-clear \"pbcopy\""
+    "copy-mode -t\"{mouse}\" \; send-keys -t\"{mouse}\" -X select-word \; send-keys -X copy-pipe-no-clear \"reattach-to-user-namespace\ pbcopy\""
 
 # Triple-click: select entire line and copy to clipboard
 bind-key -T copy-mode-vi TripleClick1Pane \
   if-shell -Ft"{mouse}" "#{alternate_on}" \
     "send-keys -M" \
-    "send-keys -t\"{mouse}\" -X select-line \; send-keys -X copy-pipe-no-clear \"pbcopy\""
+    "send-keys -t\"{mouse}\" -X select-line \; send-keys -X copy-pipe-no-clear \"reattach-to-user-namespace\ pbcopy\""
 
 bind-key -T root TripleClick1Pane \
   if-shell -Ft"{mouse}" "#{alternate_on}" \
     "send-keys -M" \
-    "copy-mode -t\"{mouse}\" \; send-keys -t\"{mouse}\" -X select-line \; send-keys -X copy-pipe-no-clear \"pbcopy\""
+    "copy-mode -t\"{mouse}\" \; send-keys -t\"{mouse}\" -X select-line \; send-keys -X copy-pipe-no-clear \"reattach-to-user-namespace\ pbcopy\""
 
 ###########################
 #  Copy Bindings (Linux)  #
