Temporarily shim in updated base24 theme
Waiting on upstream PR to finish being accepted and corresponding repos
to be built. Occurs on a weekly basis.

--- a/dotfiles/config/kitty/colors/base24-tomorrow-night.conf
+++ b/dotfiles/config/kitty/colors/base24-tomorrow-night.conf
@@ -24,7 +24,7 @@ cursor_text_color #1d1f21
 url_color #b4b7b4
 
 # Kitty window border colors
-active_border_color #4a4a4a
+active_border_color #969896
 inactive_border_color #282a2e
 
 # OS Window titlebar colors
