--- a/dotfiles/config/tmux/colors/base24-tomorrow-night.conf
+++ b/dotfiles/config/tmux/colors/base24-tomorrow-night.conf
@@ -47,7 +47,7 @@ if-shell '[ "$TINTED_TMUX_OPTION_ACTIVE" = "1" ]' {
 if-shell '[ "$TINTED_TMUX_OPTION_STATUSBAR" = "1" ]' {
   set-option -g status "on"
   set-option -g status-justify "left"
-  set-option -g status-left "#[fg=#c5c8c6,bg=#4a4a4a] #S #[fg=#4a4a4a,bg=#282a2e,nobold,noitalics,nounderscore]"
+  set-option -g status-left "#[fg=#c5c8c6,bg=#969896] #S #[fg=#969896,bg=#282a2e,nobold,noitalics,nounderscore]"
   set-option -g status-left-length "80"
   set-option -g status-left-style none
   set-option -g status-right "#[fg=#373b41,bg=#282a2e nobold, nounderscore, noitalics]#[fg=#b4b7b4,bg=#373b41] %Y-%m-%d  %H:%M #[fg=#c5c8c6,bg=#373b41,nobold,noitalics,nounderscore]#[fg=#282a2e,bg=#c5c8c6] #h "
