--- a/.gitmodules
+++ b/.gitmodules
@@ -223,3 +223,6 @@
 [submodule "dotfiles/config/nvim/pack/bundle/opt/snacks.nvim"]
 	path = dotfiles/config/nvim/pack/bundle/opt/snacks.nvim
 	url = https://github.com/folke/snacks.nvim.git
+[submodule "dotfiles/zsh/plugins/gitstatus"]
+	path = dotfiles/zsh/plugins/gitstatus
+	url = https://github.com/romkatv/gitstatus.git
