--- a/.gitmodules
+++ b/.gitmodules
@@ -229,3 +229,6 @@
 [submodule "dotfiles/zsh/plugins/git-prompt-kit"]
 	path = dotfiles/zsh/plugins/git-prompt-kit
 	url = https://github.com/olets/git-prompt-kit.git
+[submodule "dotfiles/zsh/plugins/zsh-async"]
+	path = dotfiles/zsh/plugins/zsh-async
+	url = https://github.com/mafredri/zsh-async.git
