Improvements to copy mode in tmux
- changes to position indicator to reverse the count
- adds a border to the bottom of the window
- maps to jump between prompt locations
- maps for improving visual selections (vim like)

--- a/dotfiles/config/tmux/tmux.conf
+++ b/dotfiles/config/tmux/tmux.conf
@@ -1,5 +1,11 @@
 # Tested on tmux version 3.5.a
 
+# NOTE: Not working because I'm on 3.5a, which fails to parse the version string
+# %hidden TMUX_VERSION="#{s|next-||:#{version}}"
+# %hidden IS_TMUX_3_3_OR_ABOVE="#{e|>=|f|0:$TMUX_VERSION,3.3}"
+# %hidden IS_TMUX_3_4_OR_ABOVE="#{e|>=|f|0:$TMUX_VERSION,3.4}"
+# %hidden IS_TMUX_3_5_OR_ABOVE="#{e|>=|f|0:$TMUX_VERSION,3.5}"
+
 ################################################################################
 #                                                                              #
 # General Configs                                                              #
@@ -20,6 +26,11 @@ set-window-option -g wrap-search off
 
 # Only show pane numbers for 300 milliseconds
 set -g display-panes-time 300
+
+# Make tinted-shell work by turning passthrough of escape sequences.
+# (Needed on tmux 3.3 and later).
+# Also, `yazi`: https://yazi-rs.github.io/docs/image-preview/
+set-option -g allow-passthrough all
 
 ################################################################################
 ##                                                                            ##
@@ -73,6 +84,153 @@ set-option -g status-left ' #S   ⧉ #I/#{session_windows} ⊞ #P/#{window_panes
 # status bar right side
 set-option -g status-right-length 100
 set-option -g status-right "#[fg=yellow] #(pmset -g batt | awk 'NR==2 {print $3}' | sed 's/\;//') #[fg=blue] [#{pane_width}x#{pane_height}] #[fg=brightgreen] %H:%M #[fg=white] #(date -u '+%%H:%%M %%d-%%b-%%y') "
+
+################################################################################
+##                                                                            ##
+##  Copy Mode                                                                 ##
+##                                                                            ##
+################################################################################
+
+set-option -g pane-border-lines single
+set-option -g pane-border-status bottom
+
+# disable the position indicator in copy mode
+set-hook -g pane-mode-changed {
+  if-shell -F '$IS_COPY_MODE' {
+    send-keys -X toggle-position
+  }
+}
+
+# Override default for `v` (`send-keys -X rectangle-toggle`).
+bind-key -T copy-mode-vi v if-shell -F '#{selection_present}' {
+    if-shell -F '#{||:#{==:#{@mode},#{VISUAL_BLOCK}},#{==:#{@mode},#{VISUAL_LINE}}}' {
+      # If in VISUAL_BLOCK or VISUAL_LINE mode, go to vanilla VISUAL mode.
+      send-keys -X rectangle-off
+      set-option -g @mode $VISUAL
+    } {
+      # We appear to be in VISUAL mode; go back to NORMAL mode.
+      send-keys -X rectangle-off
+      send-keys -X clear-selection
+      set-option -g @mode $NORMAL
+    }
+  } {
+    # If in NORMAL mode, start VISUAL mode.
+    send-keys -X rectangle-off
+    send-keys -X begin-selection
+    set-option -g @mode $VISUAL
+  }
+
+# Ditto for C-v.
+bind-key -T copy-mode-vi C-v if-shell -F '#{selection_present}' {
+    if-shell -F '#{||:#{==:#{@mode},#{VISUAL}},#{==:#{@mode},#{VISUAL_LINE}}}' {
+      # If in VISUAL or VISUAL_LINE mode, go to VISUAL_BLOCK mode.
+      send-keys -X rectangle-on
+      set-option -g @mode $VISUAL_BLOCK
+    } {
+      # We appear to be in VISUAL_BLOCK mode; go back to NORMAL mode.
+      send-keys -X rectangle-off
+      send-keys -X clear-selection
+      set-option -g @mode $NORMAL
+    }
+  } {
+    # If in NORMAL mode, start VISUAL_BLOCK mode.
+    send-keys -X rectangle-on
+    send-keys -X begin-selection
+    set-option -g @mode $VISUAL_BLOCK
+  }
+
+# Similar for `V`.
+bind-key -T copy-mode-vi V if-shell -F '#{selection_present}' {
+    if-shell -F '#{||:#{==:#{@mode},#{VISUAL}},#{==:#{@mode},#{VISUAL_BLOCK}}}' {
+      # If in VISUAL or VISUAL_BLOCK mode, go to VISUAL_LINE mode.
+      # (Sadly, doesn't exactly match Vim's behavior, because it starts a new
+      # linewise selection instead of adjusting the existing selection.)
+      send-keys -X rectangle-off
+      send-keys -X select-line
+      set-option -g @mode $VISUAL_LINE
+    } {
+      # We appear to be in VISUAL_LINE mode; go back to NORMAL mode.
+      send-keys -X clear-selection
+      set-option -g @mode $NORMAL
+    }
+  } {
+    # If in NORMAL mode, start VISUAL_LINE mode.
+    send-keys -X rectangle-off
+    send-keys -X select-line
+    set-option -g @mode $VISUAL_LINE
+  }
+
+# Show copy mode info in pane border.
+#
+# We show position as offset from top of history to make it less confusing (tmux
+# usually shows offset from bottom).
+#
+# - #{?condition,consequent,else} is ternary syntax.
+# - #{e|-|:x,y} does our arithmetic, `history_size` - `scroll_position`.
+# - #, is used to escape one of the commas inside the "consequent" format of
+#   the ternary syntax (without this, the format breaks); funnily enough,
+#   escaping is _not_ needing in the "else" format (and including it breaks the
+#   format).
+# - On next-3.5 and above, we can show `#{search_count}` and
+#   `#{search_count_partial}`; this latter is used to show "+" after the count
+#   in the event that the search times out without completing (I've never seen
+#   this in practice).
+# - #{e|>|:x,y} is used to check if `#{search_count}` is greater than zero.
+#   and to check if #{search_count_partial}` is non-zero (in practice, it should
+#   only ever be 0 or 1).
+# - #{==:x,y} is used to check if `#{search_count}` is 1; this is used to decide
+#   whether to render "1 result" (singular) or "N results" (plural).
+# - #{&&:a,b} is used along with ternary syntax to indicate when our
+#   `search_count` is greater than zero and `#{search_present}` is also true
+#   (otherwise we'd show the count of the last successful match instead of the
+#   current match).
+#
+# If we get a format that would allow us to know when a search is active, we
+# could show a Neovim-style indicator in the middle:
+#
+#   #[fg=red,align=centre]"Pattern not found: #{pane_search_string}#[default]"
+#
+# We can't do that right now because `pane_search_string` is set even in the
+# absence of a search, `search_match` is true only if the cursor is on a match,
+# and although `search_present` will tell us if there is a match anywhere,
+# that's not useful if we don't know that a search is active.
+#
+%hidden IS_COPY_MODE="#{==:#{pane_mode},copy-mode}"
+%hidden COPY_MODE_MARKER="#[align=left#,fg=green#,bg=black]  -- COPY --  #[default]"
+%hidden COPY_MODE_LEFT="$COPY_MODE_MARKER"
+%hidden HAS_SEARCH_RESULT="#{&&:#{e|>|:#{search_count},0},#{search_present}}"
+%hidden RESULT_OR_RESULTS="result#{?#{==:#{search_count},1},,s}"
+%hidden RESULT_COUNT_IS_PARTIAL="#{e|>|:#{search_count_partial},0}"
+%hidden SEARCH_RESULT_COUNT="(#{search_count}#{?$RESULT_COUNT_IS_PARTIAL,+,} $RESULT_OR_RESULTS)"
+%hidden OFFSET_FROM_TOP="#{e|-|:#{history_size},#{scroll_position}}"
+%hidden COPY_MODE_LOCATION="[$OFFSET_FROM_TOP/#{history_size}]"
+%hidden COPY_MODE_CENTER="#[align=centre#,bg=black]#[default]"
+
+# %if $IS_TMUX_3_5_OR_ABOVE
+%hidden COPY_MODE_RIGHT="#[align=right#,bg=black]  #{?$HAS_SEARCH_RESULT,$SEARCH_RESULT_COUNT  ,}$COPY_MODE_LOCATION  #[default]"
+# %else
+# %hidden COPY_MODE_RIGHT="#[align=right#,bg=black]  $COPY_MODE_LOCATION  #[default]"
+# %endif
+
+set-option -g pane-border-format "#{?$IS_COPY_MODE,$COPY_MODE_LEFT$COPY_MODE_CENTER$COPY_MODE_RIGHT,}"
+
+# %if $IS_TMUX_3_4_OR_ABOVE
+# Use OSC-133 sequences to navigate between prompts.
+bind-key o {
+  copy-mode
+  send-keys -X previous-prompt
+}
+bind-key -T copy-mode-vi -r o {
+  send-keys -X previous-prompt
+}
+bind-key i {
+  copy-mode
+  send-keys -X next-prompt
+}
+bind-key -T copy-mode-vi -r i {
+  send-keys -X next-prompt
+}
+# %endif
 
 ################################################################################
 #                                                                              #
