Move bin from .shell to .zsh

--- a/assets/autostart/rclone.desktop
+++ b/assets/autostart/rclone.desktop
@@ -2,7 +2,7 @@
 Name=Rclone
 GenericName=Rclone
 Comment=Rclone remote sync utility.
-Exec=.shell/bin/rclone.sh
+Exec=.zsh/bin/rclone.sh
 Terminal=false
 Type=Application
 X-GNOME-Autostart-enabled=true
