Add kube configuration

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ dotfiles/vim/tmp
 dotfiles/vim/bundles
 dotfiles/vim/snippits
 dotfiles/ssh/config
+dotfiles/kube/config
 *__pycache__
 staging/*
 .luarc.json
