Modify preconfigured layout mappings

--- a/dotfiles/config/tmux/tmux.conf
+++ b/dotfiles/config/tmux/tmux.conf
@@ -378,10 +378,10 @@ bind-key -T edit-mode-vi Down send-keys -X history-down
 
 # pre-defined sessions ctrl-b [N]
 bind-key A source-file ~/.config/tmux/scripts/administration
-bind-key D source-file ~/.config/tmux/scripts/development
-bind-key L source-file ~/.config/tmux/scripts/logs
-bind-key G source-file ~/.config/tmux/scripts/gifcast
-bind-key W source-file ~/.config/tmux/scripts/work
+bind-key D source-file ~/.config/tmux/scripts/logs
+# bind-key D source-file ~/.config/tmux/scripts/development
+# bind-key G source-file ~/.config/tmux/scripts/gifcast
+# bind-key W source-file ~/.config/tmux/scripts/work
 
 # balance splits
 unbind-key h
